--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/icons asset/css/all.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../icons asset/css/all.min.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Gilbert | Portfolio</title>
 </head>
 <body>
@@ -69,7 +69,7 @@
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
        </div>
        
-       <img src="/Images/WhatsApp Image 2019-07-07 at 15.26.01 - Copy.jpeg" alt="Gilbert picture" class="about-me__img">
+       <img src="../Images/WhatsApp Image 2019-07-07 at 15.26.01 - Copy.jpeg" alt="Gilbert picture" class="about-me__img">
     </section>
     
     <!-- My Work -->
@@ -80,19 +80,19 @@
         <div class="portfolio">
             <!-- Portfolio project 01 -->
             <a href="https://gilbertelnino.github.io/g20/UI/" class="portfolio__item">
-                <img src="/Images/glazed-ham.jpg" alt="" class="portfolio__img">
+                <img src="../Images/glazed-ham.jpg" alt="" class="portfolio__img">
             </a>
             <!-- Portfolio project 01 -->
             <a href="https://gilbertelnino.github.io/g20/UI/" class="portfolio__item">
-                <img src="/Images/glazed-ham.jpg" alt="" class="portfolio__img">
+                <img src="../Images/glazed-ham.jpg" alt="" class="portfolio__img">
             </a>
             <!-- Portfolio project 01 -->
             <a href="https://gilbertelnino.github.io/NGEB2020/User%20Interface/" class="portfolio__item">
-                <img src="/Images/glazed-ham.jpg" alt="" class="portfolio__img">
+                <img src="../Images/glazed-ham.jpg" alt="" class="portfolio__img">
             </a>
             <!-- Portfolio project 01 -->
             <a href="https://gilbertelnino.github.io/NGEB2020/User%20Interface/" class="portfolio__item">
-                <img src="/Images/glazed-ham.jpg" alt="" class="portfolio__img">
+                <img src="../Images/glazed-ham.jpg" alt="" class="portfolio__img">
             </a>
         </div>
     </section>
@@ -105,22 +105,22 @@
         </a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="https://codepen.io">
-                    <i class="fab fa-codepen"></i>
+                <a class="social-list__link" href="https://stackoverflow.com/users/10727908/ndatimana-gilbert">
+                    <i class="fab fa-stack-overflow"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="http://dribbble.com">
-                    <i class="fab fa-dribbble"></i>
+                <a class="social-list__link" href="www.linkedin.com/in/ndatimana-gilbert-a60712190">
+                    <i class="fab fa-linkedin"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://twitter.com">
+                <a class="social-list__link" href="https://twitter.com/elnino_gilbert">
                     <i class="fab fa-twitter"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com">
+                <a class="social-list__link" href="https://github.com/Gilbertelnino">
                     <i class="fab fa-github"></i>
                 </a>
             </li>
